<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oxi.bigu.controller.LoginActivity"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#eaeaea"
    android:weightSum="1">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/new_logo"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUsuario"
        android:hint="@string/user"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:minHeight="50dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSenha"
        android:hint="@string/password"
        android:minHeight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:inputType="numberPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/buttonCriar"
        android:minHeight="70dp"
        android:textColor="#ffffff"
        android:background="@color/background"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newMember"
        android:id="@+id/textViewPrimeiroAcesso"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@color/background"
        android:layout_marginLeft="10dp"
        android:textSize="16dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />


</LinearLayout>