<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"

    android:orientation="vertical"
    android:layout_below="@+id/editTextUsuario"
    android:layout_alignLeft="@+id/editTextSenha"
    android:layout_alignStart="@+id/editTextSenha"

    android:background="@color/background"
    android:weightSum="1">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.17"
        android:src="@drawable/new_logo"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/user"
        android:background="#ffffff"
        android:minHeight="50dp"
        android:layout_alignRight="@+id/buttonCriar"
        android:layout_alignEnd="@+id/buttonCriar"
        android:minWidth="320dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/editTextSenha"
        android:background="#ffffff"
        android:layout_above="@+id/buttonCriar"
        android:layout_alignLeft="@+id/buttonCriar"
        android:layout_alignStart="@+id/buttonCriar"
        android:minHeight="50dp"
        android:minWidth="320dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/buttonCriar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="60dp"
        android:minWidth="320dp"
        android:layout_marginLeft="30dp"
        android:textColor="#26ae90"
        android:textSize="18dp"
        android:background="#ffffff" />

</LinearLayout>
